# AIBar

./: .g.conf  .gitignore  CHANGELOG.md  README.md  aibar  aibar.sh  claude_token_refresh.sh  pyproject.toml  pyrightconfig.json  requirements.txt  tests.sh
.github/workflows/: release-uvx+extension.yml
.req/: config.json
docs/: REFERENCES.md  REQUIREMENTS.md  WORKFLOW.md
guidelines/: Google_Extension_API_Reference.md
images/: Screenshot_05  Screenshot_06  Screenshot_07
scripts/: aibar.sh  check-js-syntax.sh  claude_token_refresh.sh  install-gnome-extension.sh  test-gnome-extension.sh
src/aibar/aibar/: __init__.py  __main__.py  cache.py  claude_cli_auth.py  cli.py  config.py  ui.py
src/aibar/chrome-extension/: background.js  background.mjs  debug.js  debug.mjs  manifest.json  parsers.js  parsers.mjs  popup.css  popup.html  popup.js  popup.mjs
tests/: conftest.py  test_cache_locking_and_io_minimization.py  test_cache_persistence_redaction.py  test_chrome_extension_api_reference.py  test_chrome_extension_background.py  test_chrome_extension_debug.py  test_chrome_extension_debug_api.py  test_chrome_extension_manifest.py  test_chrome_extension_parser.py  test_chrome_extension_popup.py  test_chrome_extension_temp_removed.py  test_claude_dual_cooldown_symmetry.py  test_claude_dual_post_fetch_symmetry.py  test_claude_dual_stale_reset_projection.py  test_claude_oauth_refresh_recovery.py  test_claude_parse_response_reset_at.py  test_claude_rate_limit_partial_window.py  test_claude_retry_and_cli_cache.py  test_claude_token_refresh_script.py  test_cli_cache_status_retention.py  test_cli_idle_cache.py  test_cli_idle_force.py  test_cli_idle_time_429.py  test_cli_provider_throttle.py  test_cli_show_panel_alignment.py  test_cli_show_reset_format.py  test_cli_show_status_messages.py  test_cli_startup_update_preflight.py  test_cli_usage_help.py  test_copilot_cost_from_remaining.py  test_currency_symbol_flow.py  test_extension_dev_script.py  test_extension_esmodule_imports.py  test_extension_quota_label.py  test_geminiai_provider.py  test_geminiai_surface_integration.py  test_geminiai_system_auth_integration.py  test_gnome_install_uninstall.py  test_gnome_plan_alignment.py  test_install_gnome_extension.py  (+14 more)
tests/helpers/: chrome_merge_runner.mjs  chrome_parser_runner.mjs
(+46 files in other folders)
