[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aibar"
version = "0.1.0"
description = "CLI usage monitor for Claude, OpenAI, OpenRouter, GitHub Copilot, Codex, and GeminiAI."
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">= 3.11"
dependencies = [
    "click",
    "google-api-python-client",
    "google-cloud-bigquery",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "httpx",
    "pydantic",
]

[project.scripts]
aibar = "aibar.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aibar/aibar"]

[tool.hatch.build.targets.sdist]
include = [
    "src/aibar/aibar/**",
    "pyproject.toml",
    "README.md",
    "LICENSE",
]
